# mismatch

./: .gitignore  AGENTS.md  DELIVERABLES.md  PROJECT_CONTEXT.md  README.md  deliverables.md  package.json  pnpm-lock.yaml  render.yaml
app/: layout.tsx  page.tsx
services/agent/: .env.example  README.md  pyproject.toml
services/agent/app/: __init__.py  main.py  schemas.py  settings.py
services/agent/app/agent/: format.py  graph.py  nodes.py  prompts.py  state.py
services/agent/app/clients/: openai_embeddings.py
services/agent/app/eval/: helpers.py  rag_chain.py
services/agent/app/pipeline/: build_docs.py
services/agent/app/retrieval/: qdrant_store.py  reranker.py  service.py
services/agent/app/tools/: kalshi.py  match.py  models.py  nhl_api.py  odds_api.py  odds_math.py  tavily.py
services/agent/app/utils/: team_names.py
services/agent/data/eval/: advanced_results.json  baseline_results.json  testset.json
services/agent/data/processed/: docs.jsonl
services/agent/scripts/: build_docs.py  eval_advanced.py  eval_baseline.py  generate_testset.py  upsert_docs.py
web/: .env.example  package.json
web/app/: globals.css  page.tsx
web/app/api/chat/: route.ts
