[project]
name = "mismatch-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "httpx",
  "qdrant-client",
  "langchain",
  "langgraph",
  "langsmith",
  "openai",
  "ragas",
  "langchain-openai",
  "langchain-qdrant",
  "langchain-cohere",
  "openevals",
  "rapidfuzz>=3.14.3",
]
