[project]
name = "mismatch-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "pydantic-settings",
  "python-dotenv",
  "qdrant-client",
  "langchain",
  "langgraph",
  "langsmith",
  "openai",
  "ragas",
  "langchain-openai",
  "langchain-cohere",
]
